@@ -72,6 +72,9 @@ Deprecated methods and their replacements
 - wxCreateGreyedImage() deprecated, use wxImage::ConvertToGreyscale() instead.
 - wxString::GetWriteBuf() and UngetWriteBuf() deprecated, using wxStringBuffer
   or wxStringBufferLength instead.
+- wxDIRCTRL_SHOW_FILTERS style is deprecated, filters are alwsys shown if
+  specified so this style should simply be removed
+
 
 Major new features in this release
 ----------------------------------
